--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,58 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Privacy Policy – Simple Parking</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 0 20px;
+      color: #333;
+      line-height: 1.7;
+    }
+    h1 { color: #0080C8; }
+    h2 { color: #00B4D8; margin-top: 30px; }
+    p { margin-bottom: 12px; }
+    .last-updated { color: #888; font-size: 14px; }
+  </style>
+</head>
+<body>
+
+  <h1>Privacy Policy</h1>
+  <p class="last-updated">Last updated: February 24, 2026</p>
+
+  <p>This Privacy Policy describes how <strong>Simple Parking</strong> ("the App") handles your information. We are committed to protecting your privacy.</p>
+
+  <h2>1. Information We Access</h2>
+  <p><strong>Location:</strong> The App requests access to your device's location solely to detect and save your current parking spot, and to convert your coordinates into a readable address. This is done only when you choose to save a parking location.</p>
+  <p><strong>Camera & Photos:</strong> The App requests access to your camera and photo gallery to allow you to take or select photos of your parking spot. Photos are stored only on your device.</p>
+  <p><strong>User-entered data:</strong> You may optionally enter notes, a floor number, and a parking spot number. This information is saved locally on your device.</p>
+
+  <h2>2. How We Use Your Information</h2>
+  <p>All data collected by the App is used exclusively to provide the core functionality of saving and recalling your parking location. No data is used for advertising, analytics, or any other purpose.</p>
+
+  <h2>3. Data Storage</h2>
+  <p>All data — including your location, photos, and notes — is stored <strong>locally on your device only</strong>. The App does not use any remote servers or cloud storage.</p>
+
+  <h2>4. Data Sharing</h2>
+  <p>We do <strong>not</strong> share, sell, rent, or transmit any of your personal data to third parties. Your information never leaves your device.</p>
+
+  <h2>5. Data Deletion</h2>
+  <p>You can delete all saved parking data at any time directly within the App by pressing the "End Parking" button. Uninstalling the App will also remove all stored data from your device.</p>
+
+  <h2>6. Children's Privacy</h2>
+  <p>This App is intended for users aged 18 and older. We do not knowingly collect data from children.</p>
+
+  <h2>7. Changes to This Policy</h2>
+  <p>We may update this Privacy Policy from time to time. Any changes will be reflected on this page with an updated date.</p>
+
+  <h2>8. Contact Us</h2>
+  <p>If you have any questions about this Privacy Policy, please contact us at:<br/>
+  <strong>greencat4park@gmail.com</strong></p>
+
+</body>
+</html>
 
